<resources>
    <string name="app_name">Lock Screen</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_10">0</string>
    <string name="btn_11">CLEAR</string>
    <string name="btn_12">OPEN</string>
    <string name="tv_1"></string>
    <string name="tv_2">Hint:1234</string>
    <string name="tv_3">Welcome</string>

</resources>